--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -1,5 +1,9 @@
 twig:
     file_name_pattern: '*.twig'
+    form_themes: [
+        'form/layout.html.twig',
+        'form/fields.html.twig'
+    ]
 
 when@test:
     twig:
