--- a/package.json
+++ b/package.json
@@ -5,10 +5,7 @@
         "@symfony/webpack-encore": "^5.0.0",
         "autoprefixer": "^10.4.20",
         "core-js": "^3.38.0",
-        "postcss": "^8.4.49",
-        "postcss-loader": "^8.1.1",
         "regenerator-runtime": "^0.13.9",
-        "tailwindcss": "^3.4.17",
         "webpack": "^5.74.0",
         "webpack-cli": "^5.1.0",
         "webpack-notifier": "^1.15.0"
@@ -23,6 +20,10 @@
     },
     "dependencies": {
         "@alpinejs/persist": "^3.14.8",
-        "alpinejs": "^3.14.8"
+        "@tailwindcss/postcss": "^4.1.17",
+        "alpinejs": "^3.14.8",
+        "postcss": "^8.5.6",
+        "postcss-loader": "^8.2.0",
+        "tailwindcss": "^4.1.17"
     }
 }
