--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dependencies": {
         "@alpinejs/persist": "^3.14.8",
         "@tailwindcss/postcss": "^4.1.17",
+        "@tailwindplus/elements": "^1.0.18",
         "alpinejs": "^3.14.8",
         "postcss": "^8.5.6",
         "postcss-loader": "^8.2.0",
