--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@tailwindcss/postcss": "^4.1.17",
         "@tailwindplus/elements": "^1.0.18",
         "alpinejs": "^3.14.8",
+        "apexcharts": "^5.3.6",
         "postcss": "^8.5.6",
         "postcss-loader": "^8.2.0",
         "tailwindcss": "^4.1.17"
