--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
     "devDependencies": {
         "@babel/core": "^7.17.0",
         "@babel/preset-env": "^7.16.0",
+        "@hotwired/stimulus": "^3.0.0",
+        "@hotwired/turbo": "^7.1.0 || ^8.0",
+        "@symfony/stimulus-bridge": "^3.2.0 || ^4.0.0",
         "@symfony/webpack-encore": "^5.0.0",
         "autoprefixer": "^10.4.20",
         "core-js": "^3.38.0",
